--- a/site.yml
+++ b/site.yml
@@ -1,14 +1,40 @@
 ---
 # This Playbook deploys a KairosDB cluster on Amazon EC2
 
+- hosts: tag_cassandra_true:tag_kairos_true
+  remote_user: ubuntu
+  sudo: true
+  gather_facts: yes
+  vars_files:
+  # Importing OS related variables, e.g., "group_vars/ubuntu".
+  - "group_vars/{{ ansible_distribution }}"
+  # Importing cloud provider related variables, e.g., "group_vars/aws".
+  - "group_vars/aws"
+  roles:
+  - role: ssh
+  - role: java
+  - role: cassandra
+
 - hosts: tag_cassandra_true
   remote_user: ubuntu
   sudo: true
   gather_facts: yes
   vars_files:
-  - "group_vars/ubuntu"
+  # Importing OS related variables, e.g., "group_vars/ubuntu".
+  - "group_vars/{{ ansible_distribution }}"
+  # Importing cloud provider related variables, e.g., "group_vars/aws".
   - "group_vars/aws"
   roles:
-  #- role: ssh
-  #- role: java
   - role: cassandra
+
+- hosts: tag_kairos_true
+  remote_user: ubuntu
+  sudo: true
+  gather_facts: yes
+  vars_files:
+  # Importing OS related variables, e.g., "group_vars/ubuntu".
+  - "group_vars/{{ ansible_distribution }}"
+  # Importing cloud provider related variables, e.g., "group_vars/aws".
+  - "group_vars/aws"
+  roles:
+  - role: kairos
