--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,7 @@
 ---
 # This Playbook deploys a KairosDB cluster on Amazon EC2
 
-- hosts: tag_cassandra_true:tag_kairos_true
+- hosts: tag_cassandra_true:tag_kairos_true:tag_newts_true
   remote_user: ubuntu
   sudo: true
   gather_facts: yes
@@ -13,7 +13,6 @@
   roles:
   - role: ssh
   - role: java
-  - role: cassandra
 
 - hosts: tag_cassandra_true
   remote_user: ubuntu
@@ -38,3 +37,15 @@
   - "group_vars/aws"
   roles:
   - role: kairos
+
+- hosts: tag_newts_true
+  remote_user: ubuntu
+  sudo: true
+  gather_facts: yes
+  vars_files:
+  # Importing OS related variables, e.g., "group_vars/ubuntu".
+  - "group_vars/{{ ansible_distribution }}"
+  # Importing cloud provider related variables, e.g., "group_vars/aws".
+  - "group_vars/aws"
+  roles:
+  - role: newts
