--- a/roles/cassandra/tasks/main.yml
+++ b/roles/cassandra/tasks/main.yml
@@ -61,6 +61,28 @@
     group={{ user }}
     mode=0755
 
+- name: Create CQL_HOME dir on remote node
+  sudo: yes
+  file: >
+    path={{ cql_home }}
+    state=directory
+    recurse=yes
+    owner={{ user }}
+    group={{ user }}
+    mode="0755"
+
+# Copy a new "ntp.conf file into place, backing up the original if it differs from the copied version
+- name: 
+  sudo: yes
+  copy: >
+    src={{ setup_ycsb_cql }}
+    dest={{ cql_home }}/
+    owner={{ user }}
+    group={{ user }}
+    mode="0755"
+
+### OS VARIABLES ###
+# /etc/profile
 - name: Set CASSANDRA_HOME in /etc/profile
   sudo: yes
   lineinfile: >
@@ -73,6 +95,14 @@
     dest=/etc/profile
     line="export PATH=$PATH:$CASSANDRA_HOME/bin"
 
+- name: Set CQLSH_HOST in /etc/profile
+  sudo: yes
+  lineinfile: >
+    dest=/etc/profile
+    line="export CQLSH_HOST={{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}"
+
+
+# /etc/bash.bashrc
 - name: Set CASSANDRA_HOME in /etc/bash.bashrc
   sudo: yes
   lineinfile: >
@@ -85,6 +115,14 @@
     dest="/etc/bash.bashrc"
     line="export PATH=$PATH:$CASSANDRA_HOME/bin"
 
+- name: Set CQLSH_HOST in /etc/bash.bashrc
+  sudo: yes
+  lineinfile: >
+    dest="/etc/bash.bashrc"
+    line="export CQLSH_HOST={{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}"
+
+
+# /etc/skel/.bashrc
 - name: Set CASSANDRA_HOME in /etc/skel/.bashrc
   sudo: yes
   lineinfile: >
@@ -97,6 +135,14 @@
     dest=/etc/skel/.bashrc
     line="export PATH=$PATH:$CASSANDRA_HOME/bin"
 
+- name: Set CQLSH_HOST in /etc/skel/.bashrc
+  sudo: yes
+  lineinfile: >
+    dest=/etc/skel/.bashrc
+    line="export CQLSH_HOST={{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}"
+
+
+# /home/ubuntu/.bashrc
 - name: Set CASSANDRA_HOME in /home/ubuntu/.bashrc
   sudo: yes
   lineinfile: >
@@ -109,6 +155,14 @@
     dest=/home/ubuntu/.bashrc
     line="export PATH=$PATH:$CASSANDRA_HOME/bin"
 
+- name: Set CQLSH_HOST in /home/ubuntu/.bashrc
+  sudo: yes
+  lineinfile: >
+    dest=/home/ubuntu/.bashrc
+    line="export CQLSH_HOST={{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}"
+
+
+# /root/.bashrc
 - name: Set CASSANDRA_HOME in /root/.bashrc
   sudo: yes
   lineinfile: >
@@ -120,6 +174,12 @@
   lineinfile: >
     dest=/root/.bashrc
     line="export PATH=$PATH:$CASSANDRA_HOME/bin"
+
+- name: Set CQLSH_HOST in /root/.bashrc
+  sudo: yes
+  lineinfile: >
+    dest=/root/.bashrc
+    line="export CQLSH_HOST={{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}"
 
 - name: Remove tmp dir
   sudo: yes
