--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,7 @@
 ---
 # This Playbook deploys a KairosDB cluster on Amazon EC2
 
-- hosts: tag_cassandra_true:tag_kairos_true:tag_newts_true
+- hosts: tag_cassandra_true:tag_kairos_true:tag_newts_true:tag_ycsb_true:&tag_Name_exp1
   remote_user: ubuntu
   sudo: true
   gather_facts: yes
@@ -14,7 +14,7 @@
   - role: ssh
   - role: java
 
-- hosts: tag_cassandra_true
+- hosts: tag_cassandra_true:&tag_Name_exp1
   remote_user: ubuntu
   sudo: true
   gather_facts: yes
@@ -26,7 +26,7 @@
   roles:
   - role: cassandra
 
-- hosts: tag_kairos_true
+- hosts: tag_kairos_true:&tag_Name_exp1
   remote_user: ubuntu
   sudo: true
   gather_facts: yes
@@ -38,7 +38,7 @@
   roles:
   - role: kairos
 
-- hosts: tag_newts_true
+- hosts: tag_newts_true:&tag_Name_exp1
   remote_user: ubuntu
   sudo: true
   gather_facts: yes
@@ -49,3 +49,15 @@
   - "group_vars/aws"
   roles:
   - role: newts
+
+- hosts: tag_ycsb_true:&tag_Name_exp1
+  remote_user: ubuntu
+  sudo: true
+  gather_facts: yes
+  vars_files:
+  # Importing OS related variables, e.g., "group_vars/ubuntu".
+  - "group_vars/{{ ansible_distribution }}"
+  # Importing cloud provider related variables, e.g., "group_vars/aws".
+  - "group_vars/aws"
+  roles:
+  - role: ycsb
