--- a/roles/aws/tasks/main.yml
+++ b/roles/aws/tasks/main.yml
@@ -12,3 +12,7 @@
 - name: Install AWS CLI
   sudo: yes
   pip: name=awscli
+
+- name: Install mdadm
+  sudo: yes
+  apt: name=mdadm update_cache=yes
