--- a/site.yml
+++ b/site.yml
@@ -27,6 +27,29 @@
   #   add_host: hostname={{ item.public_ip }} groupname=tag_cassandra_true
   #   with_items: ec2.tagged_instances
 
+
+- name: Setting up volumes in testbed
+  hosts: tag_cassandra_true
+  user: ubuntu                          # [2Do: Read from OS config file]
+  gather_facts: true
+  vars_files: 
+  - group_vars/Ubuntu
+  - roles/vil/vars/cassandra.yml
+  tasks:
+    - set_fact:
+        sutdevice="/dev/md0"
+        fs_blocksize="4096"
+      when: ebs_volume_list|length > 1
+    - include: tasks/raid.yml
+      when: ebs_volume_list|length > 1
+    - set_fact:
+        sutdevice="/dev/xvdb"
+        fs_blocksize="4096"
+      when: ebs_volume_list|length == 1 
+    - include: tasks/mounted_dev.yml
+      when: ebs_volume_list|length == 1
+
+
 # FIXME: Wait for SSH to come up
 - hosts: tag_cassandra_true:tag_kairos_true:tag_newts_true:tag_ycsb_true
   remote_user: ubuntu
@@ -39,7 +62,7 @@
   - "group_vars/aws"
   roles:
   - role: aws
-  - role: ssh
+  # - role: ssh
   - role: java
   - role: dstat
 
