--- a/site.yml
+++ b/site.yml
@@ -55,6 +55,9 @@
   remote_user: ubuntu
   sudo: true
   gather_facts: yes
+  vars:
+    aws_region: "eu-west-1"
+    aws_key_file: "{{ ansible_env.AWS_KEY_FILE }}"
   vars_files:
   # Importing OS related variables, e.g., "group_vars/ubuntu".
   - "group_vars/{{ ansible_distribution }}"
